--- a/task-01/src/index.html
+++ b/task-01/src/index.html
@@ -100,8 +100,8 @@
                     <br>
                     <span class="modal-job-title">{{title}}</span>
                     <br>
-                    <span class="modal-adress">
-                      <i class="fa fa-map-marker"></i>{{getFormatedAdress location}}, {{unit.name}}</span>
+                    <span class="modal-address">
+                      <i class="fa fa-map-marker"></i>{{getFormatedaddress location}}, {{unit.name}}</span>
                   </div>
                 </div>
               </div>
